# data_logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_logger.cpp  data_logger.h  example.cpp  example_log.txt  ilogger.h  logger  logger.h  logger_test.cpp  traits.h
